Add Maps, fix up more stuff

--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,9 @@
   "variants": {
     "items_only": {
       "display_name": "Items-Only"
+    },
+    "standard_map": {
+      "display_name": "Standard with Map"
     }
   }
 }
