--- a/variants/standard_map/layouts/settings.json
+++ b/variants/standard_map/layouts/settings.json
@@ -25,6 +25,18 @@
             "item": "progression"
           }
         ]
+      },
+      {
+        "type": "group",
+        "header": "Toggles",
+        "header_background": "#3e4b57",
+        "content":[
+          {
+            "type": "item",
+            "margin": "-5,-1,-5,-5",
+            "item": "connections-setting"
+          }
+        ]
       }
     ]
   }
