--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         # one OS
-        os-name: [windows-latest]
+        os-name: [ubuntu-latest]
         python-version: [3.8]
 
     steps:
@@ -80,14 +80,14 @@ jobs:
       - name: Upload AppVersion Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: appversion
+          name: appversion-${{ matrix.os-name }}
           path: ${{ steps.parentDir.outputs.value}}/deploy
 
       # Upload Archive Artifact
       - name: Upload Archive Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: archive
+          name: archive-${{ matrix.os-name }}
           path: ${{ steps.parentDir.outputs.value}}/deploy
 
   # Deploy to GitHub Releases
@@ -134,7 +134,7 @@ jobs:
       - name: Download AppVersion Artifact
         uses: actions/download-artifact@v2
         with:
-          name: appversion
+          name: appversion-${{ matrix.os-name }}
           path: ${{ steps.parentDir.outputs.value }}/build
       # debug info
       - name: Debug Info
