--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -166,8 +166,8 @@ jobs:
           tag_name: v${{ steps.debug_info.outputs.github_tag }}
           release_name: Axiom Verge EmoTracker Pack v${{ steps.debug_info.outputs.github_tag }}
           body_path: RELEASENOTES.md
-          # draft: true
-        if: contains(github.ref, 'master')
+          draft: true
+        # if: contains(github.ref, 'master')
       # upload windows archive asset
       - name: Upload Windows Archive Asset
         id: upload-windows-asset
@@ -179,4 +179,4 @@ jobs:
           asset_path: ../deploy/windows/averge_pack_mm1.zip
           asset_name: averge_pack_mm1.zip
           asset_content_type: application/zip
-        if: contains(github.ref, 'master')
+        # if: contains(github.ref, 'master')
