--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Axiom Verge Tracker",
+  "name": "Axiom Verge Randomizer",
   "author": "Seraphin Eveles & Mike Trethewey",
   "game_name": "Axiom Verge",
   "package_version": "0.1",
