--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,10 @@
   "name": "Axiom Verge Randomizer",
   "author": "Seraphin Eveles & Mike Trethewey",
   "game_name": "Axiom Verge",
+  "flags": [
+    "map",
+    "pins"
+  ],
   "package_version": "1.0",
   "package_uid": "averge_pack_mm1",
   "platform": "pc",
@@ -11,7 +15,11 @@
       "display_name": "Items-Only"
     },
     "standard_map": {
-      "display_name": "Standard with Map"
+      "display_name": "Standard with Map",
+      "flags": [
+        "map",
+        "pins"
+      ]
     }
   }
 }
