--- a/variants/standard_map/layouts/settings.json
+++ b/variants/standard_map/layouts/settings.json
@@ -37,6 +37,18 @@
             "item": "connections-setting"
           }
         ]
+      },
+      {
+        "type": "group",
+        "header": "FPS Limiter",
+        "header_background": "#3e4b57",
+        "content": [
+          {
+            "type": "item",
+            "margin": "-5,-1,-5,-5",
+            "item": "fps"
+          }
+        ]
       }
     ]
   }
