Finish Go Mode button
Fixes #21 .

--- a/items/settings.json
+++ b/items/settings.json
@@ -28,10 +28,10 @@
       {
         "img": "images/settings/progression/advanced.png",
         "codes": "progadvanced"
-      // },
-      // {
-      //   "img": "images/settings/progression/masochist.png",
-      //   "codes": "progmasochist"
+      },
+      {
+        "img": "images/settings/progression/masochist.png",
+        "codes": "progmasochist"
       }
     ]
   },
