--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,6 +111,9 @@ jobs:
         # release only on ubuntu
         os-name: [ubuntu-latest]
         python-version: [3.8]
+        packlist-username: [miketrethewey]
+        packlist-repository: [mm1s-packs]
+        packlist-branch: [publish]
 
     needs: [install-prepare-release]
     steps:
@@ -120,6 +123,7 @@ jobs:
       - name: Install Dependencies via pip
         run: |
           python -m pip install pytz requests
+
       # get parent directory
       - name: Get Repo Name
         uses: mad9000/actions-find-and-replace-string@2
@@ -142,6 +146,7 @@ jobs:
           source: ${{ steps.parentDirNotWin.outputs.value }}
           find: '${{ steps.repoName.outputs.value }}\${{ steps.repoName.outputs.value }}'
           replace: ${{ steps.repoName.outputs.value }}
+
       # download appversion artifact
       - name: Download AppVersion Artifact
         uses: actions/download-artifact@v2
@@ -154,6 +159,7 @@ jobs:
         with:
           name: archive-${{ matrix.os-name }}
           path: ${{ steps.parentDir.outputs.value }}/deploy
+
       # debug info
       - name: Debug Info
         id: debug_info
@@ -167,6 +173,7 @@ jobs:
           RELEASE_NAME="Axiom Verge EmoTracker Pack ${GITHUB_TAG}"
           echo "Release Name: ${RELEASE_NAME}"
           echo "Git Tag:      ${GITHUB_TAG}"
+
       # create a release
       - name: Create a Release
         id: create_release
@@ -179,6 +186,7 @@ jobs:
           body_path: RELEASENOTES.md
           # draft: true
         if: contains(github.ref, 'master')
+
       # upload archive asset
       - name: Upload Archive Asset
         id: upload-asset
@@ -191,13 +199,14 @@ jobs:
           asset_name: averge_pack_mm1.zip
           asset_content_type: application/zip
         if: contains(github.ref, 'master')
+
       # Update EmoTracker Pack Repository
       - name: Update EmoTracker Pack Repository
         id: update-pack-repo
         uses: benc-uk/workflow-dispatch@v1
         with:
           workflow: Deploy Pages
-          repo: miketrethewey/mm1s-packs
-          ref: publish
+          repo: ${{ matrix.packlist-username }}/${{ matrix.packlist-repository }}
+          ref: ${{ matrix.packlist-branch }}
           token: ${{ secrets.MY_PAT }}
         # if: contains(github.ref, 'master')
