--- a/manifest.json
+++ b/manifest.json
@@ -2,21 +2,22 @@
   "name": "Axiom Verge Randomizer",
   "author": "Seraphin Eveles & Mike Trethewey",
   "game_name": "Axiom Verge",
-  "flags": [
-    "map",
-    "pins"
-  ],
+  "flags": [], // build from variants
   "package_version": "1.0",
   "package_uid": "averge_pack_mm1",
   "platform": "pc",
   "documentation_url": "https://github.com/miketrethewey/averge_pack_mm1/blob/master/README.md",
   "variants": {
     "items_only": {
-      "display_name": "Items-Only"
+      "display_name": "Items-Only",
+      "flags": [
+        "chathud"
+      ]
     },
     "standard_map": {
       "display_name": "Standard with Map",
       "flags": [
+        "chathud",
         "map",
         "pins"
       ]
